feat: add workspaces and workspace members
